[package]
authors = ["Javier Cardona <javier.cardona@gmail.com>"]
edition = "2018"
readme = "README.md"
name = "stm32l0-disco-tinyusb"
version = "0.1.0"

[dependencies]
cortex-m = "0.7.7"
cortex-m-rt = "0.7.2"
cortex-m-semihosting = "0.5.0"
panic-halt = "0.2.0"
stm32l0xx-hal = { version = "0.10.0", features = ["stm32-usbd", "mcu-STM32L053C8Tx"]}
stm32-usbd = "0.6.0"
usb-device = "0.2.9"
usbd-serial = "0.1.1"
usbd_mass_storage = "0.1.0"
hex-display = "0.3.0"
numtoa = "0.2.4"
usbd_scsi = "0.1.0"
usbd-dfu = "0.3.0"
panic-semihosting = "0.6.0"

# this lets you use `cargo fix`!
[[bin]]
name = "stm32l0-disco-tinyusb"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
